[package]
name = "kms-encryption-kit"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
aws-sdk-config = "1.51.0"
aws-sdk-kms = "1.50.0"
base64 = "0.22.1"
clap = { version = "4.5.21", features = ["derive"] }
ed25519-dalek = "2.1.1"
serde_json = "1.0.133"
solana-sdk = "2.1.2"
tempfile = "3.14.0"
tokio = { version = "1.41.1", features = ["full"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
